[package]
name = "paimon"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of RSA encryption and signatures"
repository = "https://github.com/hazae41/paimon-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false }
rsa = { version = "0.8.2", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2.10", default-features = false, features = ["js"] }
